--- a/HW6/Task6_4/Task6_4/Views/Home/ExplicitLoadingIndex.cshtml
+++ b/HW6/Task6_4/Task6_4/Views/Home/ExplicitLoadingIndex.cshtml
@@ -14,7 +14,7 @@
     {
         <tr>
             <td>@mobile.Name</td>
-            <td>@mobile.Brand?.Name</td>
+            <td>@mobile.BrandName</td>
         </tr>
     }
 </table>
